--- a/www/index.html
+++ b/www/index.html
@@ -19,31 +19,36 @@
 -->
 <html>
     <head>
-        <!--
-        Customize this policy to fit your own app's needs. For more guidance, see:
-            https://github.com/apache/cordova-plugin-whitelist/blob/master/README.md#content-security-policy
-        Some notes:
-            * gap: is required only on iOS (when using UIWebView) and is needed for JS->native communication
-            * https://ssl.gstatic.com is required only on Android and is needed for TalkBack to function properly
-            * Disables use of inline scripts in order to mitigate risk of XSS vulnerabilities. To change this:
-                * Enable inline JS: add 'unsafe-inline' to default-src
-        -->
         <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *; img-src 'self' data: content:;">
         <meta name="format-detection" content="telephone=no">
         <meta name="msapplication-tap-highlight" content="no">
         <meta name="viewport" content="initial-scale=1, width=device-width, viewport-fit=cover">
+
+        <!-- CSS読み込み -->
+        <link rel="stylesheet" type="text/css" href="lib/onsenui/css/onsenui.css">
+        <link rel="stylesheet" type="text/css" href="lib/onsenui/css/onsen-css-components.css">
         <link rel="stylesheet" type="text/css" href="css/index.css">
-        <title>Hello World</title>
+
+        <!-- ライブラリ読み込み -->
+        <script type="text/javascript" src="cordova.js"></script>
+        <script type="text/javascript" src="lib/onsenui/js/onsenui.js"></script>
+        <script type="text/javascript" src="js/index.js"></script>
+        <title>Screamot</title>
     </head>
     <body>
-        <div class="app">
-            <h1>Apache Cordova</h1>
-            <div id="deviceready" class="blink">
-                <p class="event listening">Connecting to Device</p>
-                <p class="event received">Device is Ready</p>
+        <ons-page>
+            <!-- Marmot Image -->
+            <div id="marmot" class="marmot-image">
+                <img id="marmot_image" src="img/standby1.jpg" alt="marmot" style="width:100%;border-radius:3px;">
             </div>
-        </div>
-        <script type="text/javascript" src="cordova.js"></script>
-        <script type="text/javascript" src="js/index.js"></script>
+            <!-- Buttons -->
+            <div class="marmot-buttons">
+                <ons-button id="button_ready1">Ready1</ons-button>
+                <ons-button id="button_shout1">Shout1</ons-button>
+                <p></p>
+                <ons-button id="button_ready2">Ready2</ons-button>
+                <ons-button id="button_shout2">Shout2</ons-button>
+            </div>
+        </ons-page>
     </body>
 </html>
